<resources>
    <string name="app_name">Lets Meet</string>
    <string name="app_desc">Meeting with Friends</string>

    <!-- Parse API -->
    <string name="parse_app_id">Hw4xO8CIqVxU0RhCH1z623XBosgjM6wz3cKmVBMR</string>
    <string name="parse_client_key">Enr505CuI7ySCDXh4uM6q7WgfM5mohN6ZTDWgYJ6</string>

    <!-- Logn in/Sign up Activity -->
    <string name="text_phone_no">Your Phone Number</string>
    <string name="text_captcha">Captcha Code</string>
    <string name="text_reset">Reset</string>
    <string name="text_submit">Submit</string>
    <string name="text_login_name">Login Name</string>
    <string name="text_password">Password</string>

    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_login_fb">Facebook Login</string>
    <string name="text_btn_signup">Signup</string>
    <string name="text_btn_save">Save</string>
    <string name="text_btn_update">Update</string>
    <string name="text_btn_delete">Delete</string>
    <string name="text_user_code">User ID</string>
    <string name="text_created_by">Created By</string>
    <string name="text_updated_by">Updated By</string>
    <string name="text_desc">Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_vote">Vote</string>
    <string name="text_poll_name">Poll Title</string>
    <string name="text_poll_next">Next</string>

    <!-- Titles used in Drawer -->
    <string name="title_section0">------------</string>
    <string name="title_section1">Active Poll</string>
    <string name="title_section2">Poll Result</string>
    <string name="title_section3">New Poll</string>
    <string name="title_section4">Active Event</string>
    <string name="title_section5">New Event</string>
    <string name="title_section6">Friend List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu Action -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- New Poll Fragment -->
    <string name="text_btn_new_poll">NEW POLL</string>
    <string name="text_newpoll_deadline_date">Deadline Date</string>
    <string name="text_newpoll_deadline_time">Deadline Time</string>
    <string name="text_poll_pick_friend">Pick Friend</string>


    <!-- New result Fragment -->
    <string name="text_poll_result">POLL RESULT</string>
    <string name="text_result_chartback">Back</string>


    <!-- New Event Fragment -->
    <string name="text_event_name">Event Title</string>
    <string name="text_event_date">Event Date</string>
    <string name="text_event_time">Event Time</string>
    <string name="text_event_venue">Meeting Place / Venue</string>
    <string name="text_event_remark_url">Remarks</string>
    <string name="btn_event_pick_photo">Upload Photo</string>
    <string name="btn_event_pick_friend_list">Pick Friends</string>
    <string name="btn_event_create">Create Event</string>

    <!-- Friend List Fragment -->
    <string name="text_friend_list_submit">Done</string>
</resources>
