<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="#0099cc"
    tools:context=".LoginActivity">

    <TextView android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_above="@+id/txt_username"
        android:text="@string/app_desc" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txt_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:hint="@string/text_login_name"
        android:inputType="text"
        app:bootstrapSize="md"
        app:bootstrapBrand="info" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txt_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:bootstrapSize="md"
        app:bootstrapBrand="info" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:gravity="center" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:onClick="fnLogin"
            android:text="@string/text_btn_login"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:onClick="fnSignUp"
            android:text="@string/text_btn_signup"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true" />

    </LinearLayout>

</RelativeLayout>