<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ust.poll.MainActivity$PlaceholderFragment">
    <TextView android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="NEW EVENT" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/Title">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txt_etitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/bootstrap_h1_text_size"
                android:gravity="center"
                android:inputType="textAutoComplete"
                android:hint="@string/text_event_name" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txt_eDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/bootstrap_h1_text_size"
                android:gravity="center"
                android:inputType="date"
                android:focusable="false"
                android:hint="@string/text_event_date" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txt_eTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/bootstrap_h1_text_size"
                android:gravity="center"
                android:inputType="time"
                android:focusable="false"
                android:hint="@string/text_event_time" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txt_eVenue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/bootstrap_h1_text_size"
                android:gravity="center"
                android:inputType="textAutoComplete"
                android:hint="@string/text_event_venue" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/txt_eRemarkURL"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/bootstrap_h1_text_size"
                android:gravity="center"
                android:inputType="textUri"
                android:hint="@string/text_event_remark_url" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/image_event_photo" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_event_pick_photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_event_pick_photo"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_event_pick_friend_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_event_pick_friend_list"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_event_create"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_event_create"
                android:layout_marginTop="10dp"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>