<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="#0099cc"
    tools:context=".LoginActivity">

    <TextView android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_above="@+id/txt_phone_no"
        android:text="@string/app_desc" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txt_phone_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#e4481941"
        android:gravity="center"
        android:hint="@string/text_phone_no"
        android:inputType="phone"
        app:bootstrapSize="md"
        app:bootstrapBrand="info" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txt_captcha_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phone_no"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#e4481941"
        android:gravity="center"
        android:hint="@string/text_captcha"
        app:bootstrapSize="md"
        app:bootstrapBrand="info" />

    <ImageView
        android:id="@+id/img_captcha"
        android:layout_below="@+id/txt_captcha_code"
        android:layout_alignLeft="@+id/txt_captcha_code"
        android:layout_alignStart="@+id/txt_captcha_code"
        android:layout_marginTop="27dp"
        android:minHeight="50dp"
        android:minWidth="200dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_captcha"
        android:layout_below="@+id/img_captcha"
        android:layout_alignLeft="@+id/txt_captcha_code"
        android:layout_alignStart="@+id/txt_captcha_code"
        android:layout_marginTop="27dp"
        android:minHeight="50dp"
        android:minWidth="200dp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_captcha"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:onClick="fnReset"
            android:text="@string/text_reset"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="3dp"
            android:onClick="fnSubmit"
            android:text="@string/text_submit"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true" />

    </LinearLayout>



</RelativeLayout>