
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.ust.poll.MainActivity$PlaceholderFragment">



    <TextView android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="NEW POLL" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/txt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/bootstrap_edit_text_default_font_size"
        android:gravity="center"
        android:hint="@string/text_poll_name"
        android:layout_below="@+id/Title" />


    <LinearLayout
        android:id="@+id/linear_button_group_option"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_alignLeft="@+id/txt_title"
        android:layout_alignStart="@+id/txt_title">

        <com.beardedhen.androidbootstrap.BootstrapButtonGroup
            android:id="@+id/button_group_option"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:bootstrapSize="lg"
            android:gravity="center"
            app:bootstrapBrand="success"
            app:roundedCorners="true"
            app:showOutline="true"
            android:layout_below="@+id/Title">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/option1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOption"
                android:text="OPTION 1" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/option2" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOption"
                android:text="OPTION 2" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/option3" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOption"
                android:text="OPTION 3" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/option4" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOption"
                android:text="OPTION 4" />

        </com.beardedhen.androidbootstrap.BootstrapButtonGroup>


        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txt_deadlineDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:textSize="@dimen/bootstrap_h1_text_size"
            android:gravity="center"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/text_newpoll_deadline_date" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/txt_deadlineTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:textSize="@dimen/bootstrap_h1_text_size"
            android:gravity="center"
            android:inputType="time"
            android:focusable="false"
            android:hint="@string/text_newpoll_deadline_time" />

    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_new_poll_friend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="fnPickfriend"
        android:text="@string/text_poll_pick_friend"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:layout_below="@+id/linear_button_group_option" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_new_poll_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="fnLogin"
        android:text="@string/text_poll_next"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:layout_below="@+id/btn_new_poll_friend" />

</RelativeLayout>

</ScrollView>